syntax = "proto3";

package stash.GRPC.V1.Documents;
import "documents/document.proto";
import "documents/vector.proto";

message PutRequest {
  bytes collectionId = 1;
  Document source = 2;
  repeated Vector vectors = 3;
  uint32 firstSchemaVersion = 4;
  uint32 lastSchemaVersion = 5;
}
